# AI_first_agent

./: main.ipynb  main.py  pyproject.toml  python_setup.md
